# Sorter

./: README.md  app_fingerprint_files.py  app_search_music_brainz.py  class_audiofp_client.py  class_autocomplete_input.py  class_data_manage.py  class_file_manipulate.py  class_search_musicbrainz.py  class_sql_search_query.py  class_sqlite_database.py  class_textual_tui.py  class_tree_viewer.py  class_tui_file_explorer.py  config.template.yaml  db_audio_fingerprints.py  key_press_functions.py  requirements.txt
audiofp-server/: Cargo.toml  README.md
audiofp-server/src/: audio_loader.rs  main.rs
